--- a/src/app/dashboard/add-data/add-data.component.html
+++ b/src/app/dashboard/add-data/add-data.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addChildForm" (ngSubmit)="onSubmit()">
+<!-- <form [formGroup]="addChildForm" (ngSubmit)="onSubmit()">
     <h2>Ihr Kind anmelden!</h2>
     <input placeholder="Name" type="input" formControlName="name"><br />
     <input placeholder="Geburtsdatum" type="date" formControlName="birthDate"><br />
@@ -8,4 +8,30 @@
             {{kindergarden.name}}, {{kindergarden.address}}</option>
     </select>
     <button type="submit">Erfassen</button>
-</form>
+</form> -->
+
+<mat-form-field [formGroup]="addChildForm" >
+    <h2>Ihr Kind anmelden!</h2>
+    <input matInput placeholder="Name" formControlName="name">
+    <!-- <mat-error *ngIf="name.invalid">{{getErrorMessage()}}</mat-error> -->
+
+    <input matInput placeholder="Geburtsdatum" type="date" formControlName="birthDate">
+    <!-- TODO use codes to vertify inputs -->
+    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+
+    <!-- <mat-select formControlName="kindergardenId">
+        <mat-label>Bitte auswählen</mat-label>
+            <mat-option *ngFor="let kindergarden of storeService.kindergardens" [ngValue]="kindergarden.id">
+            {{kindergarden.name}}, {{kindergarden.address}}
+        </mat-option>
+      </mat-select> -->
+
+      <select formControlName="kindergardenId">
+        <option value="" disabled>Bitte auswählen</option>
+        <option *ngFor="let kindergarden of storeService.kindergardens" [ngValue]="kindergarden.id">
+            {{kindergarden.name}}, {{kindergarden.address}}</option>
+      </select>
+
+      <button mat-raised-button type="submit" (click)="onSubmit()">Erfassen</button>
+</mat-form-field>
