--- a/src/app/dashboard/add-data/add-data.component.scss
+++ b/src/app/dashboard/add-data/add-data.component.scss
@@ -1,5 +1,5 @@
 
-form {
+/* form {
     width: 50%;
     background-color: whitesmoke;
     margin: 0 auto;
@@ -11,6 +11,24 @@ form {
 }
 
 form label {
+    display: block;
+    font-size: 1.2em;
+    color: darkslategrey;
+    padding-left: 3px;    
+} */
+
+mat-form-field {
+    width: 50%;
+    background-color: whitesmoke;
+    margin: 0 auto;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+mat-form-field label {
     display: block;
     font-size: 1.2em;
     color: darkslategrey;
